# sabber

./: .gitignore  CMakeLists.txt  README.md  accountconfig.cpp  accountconfig.h  connection.cpp  connection.h  conversation.cpp  conversation.h  conversationmanager.cpp  conversationmanager.h  conversationwindow.cpp  conversationwindow.h  echoreplier.cpp  echoreplier.h  main.cpp  sabber.pro  sabber.qrc  windowmanager.cpp  windowmanager.h
qml/sabber/: conversationwindow.qml  main.qml
src/: chatmessage.cpp  chatmessage.h  connection.cpp  connection.h  conversation.cpp  conversation.h  conversationwindow.cpp  conversationwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  windowmanager.cpp  windowmanager.h
